<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Circular</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_config">Configurações</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_msg">Mensagens</string>
    <string name="menuItinerario">Consultar Itinerários</string>
    <string name="menuAtualizar">Atualizar Dados</string>
    <string name="menuViagem">Acompanhar Viagem</string>
    <string name="menuFavoritos">Consultar Favoritos</string>
    <string name="menuRA">Realidade Aumentada</string>
    <string name="menuParadas">Consultar Paradas</string>
    <string name="menuOpcoes">Opções</string>
    <string name="title_activity_itinerarios">Itinerários</string>
    <string name="title_activity_atualizar_dados">Atualizar Dados</string>
    <string name="placeholderEstado">UF</string>
    <string name="placeholderLocal">Local</string>
    <string name="placeholderBairro">Bairro</string>
    <string name="placeholderPartida">Partida</string>
    <string name="placeholderDestino">Destino</string>
    <string name="title_activity_todos_horarios">Todos os Horários</string>
    <string name="title_activity_paradas">Paradas</string>
    <string name="title_activity_parada_detalhe">Detalhes da Parada</string>
    <string name="title_activity_itinerario_detalhe">Detalhes do Itinerário</string>
    <string name="title_activity_realidade_aumentada">Realidade Aumentada</string>
    <string name="title_activity_opcoes">Opções</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="title_activity_realidade_nova">Realidade Aumentada</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="title_activity_opcoes_itinerario">Opções de Itinerário</string>
    <string name="title_activity_verifica_dados_disponiveis_servidor">VerificaDadosDisponiveisServidor</string>
    <string name="title_activity_coleta_main">ColetaMainActivity</string>

    <string name="menuItinerarioCadastro">Cadastro Itinerários</string>
    <string name="menuAtualizarCadastro">Em Breve</string>
    <string name="menuRACadastro">Em Breve</string>
    <string name="menuParadasCadastro">Cadastra Paradas</string>

    <string name="global_tracker">UA-65884694-1</string>
    <string name="title_activity_mensagens">Mensagens</string>
    <string name="title_activity_modal_detalhe_mensagem">Detalhe Mensagem</string>
    <string name="title_activity_listview_com_filtro">ListviewComFiltro</string>
    <string name="title_activity_envia_dados_coletados">EnviaDadosColetados</string>
    <string name="title_activity_secoes">Seções</string>

    <string name="google_app_id">vostre-circular</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="menuMapa">Mapa</string>
    <string name="title_activity_mapa_consulta">Mapa</string>

</resources>
