<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    tools:context="br.com.vostre.circular.ColetaMainActivity"
    tools:ignore="MergeRootFrame"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    style="@style/background_principal">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_branca"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:text="@string/menuItinerarioCadastro"
                android:id="@+id/button"
                />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:text="@string/menuRACadastro"
                android:id="@+id/buttonModoCamera"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:text="@string/menuParadasCadastro"
                android:id="@+id/button4"
                android:onClick="abreTelaMapa"
                />

            <Button
                android:textAllCaps="false"
                style="@style/BotoesMenu"
                android:text="@string/menuAtualizarCadastro"
                android:id="@+id/button3"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="#FFFFFF"
                android:text="Desenvolvido por"
                />
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:src="@drawable/logo_vostre_branca_2015"
                android:layout_weight="1"
                android:onClick="abreTelaMapa"
                android:layout_margin="10dp" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer"/>

</android.support.v4.widget.DrawerLayout>