<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/background_principal"
    android:id="@+id/scrollView">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="br.com.vostre.circular.Itinerarios"
        tools:ignore="MergeRootFrame"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="Estado"
                android:gravity="bottom"
                style="@style/form_label"
                android:textColor="#FFF"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cidade"
                android:gravity="bottom"
                style="@style/form_label"
                android:textColor="#FFF"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
        >

            <br.com.vostre.circular.utils.CustomSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/comboEstado"
                android:layout_weight="3"
                android:spinnerMode="dialog"
                android:prompt="@string/placeholderEstado"
                android:background="@drawable/spinner_quadrado"
            >

            </br.com.vostre.circular.utils.CustomSpinner>

            <br.com.vostre.circular.utils.CustomSpinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/comboCidade"
                android:layout_weight="1"
                android:spinnerMode="dialog"
                android:background="@drawable/spinner_quadrado"
                android:prompt="@string/placeholderLocal" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Partida"
            android:id="@+id/textViewTodosHorarios"
            style="@style/form_label"
            android:textColor="#FFF" />

        <br.com.vostre.circular.utils.CustomSpinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comboPartida"
            android:spinnerMode="dialog"
            android:background="@drawable/spinner_quadrado"
            android:prompt="@string/placeholderPartida" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Destino"
            android:id="@+id/textView3"
            style="@style/form_label"
            android:textColor="#FFF" />

        <br.com.vostre.circular.utils.CustomSpinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comboDestino"
            android:spinnerMode="dialog"
            android:background="@drawable/spinner_quadrado"
            android:prompt="@string/placeholderDestino" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Tarifa"
                    android:id="@+id/textViewTarifaLabel"
                    android:layout_weight="1"
                    style="@style/form_label"
                    android:textColor="#FFF"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Empresa"
                    android:id="@+id/textViewEmpresaLabel"
                    android:layout_weight="3"
                    android:gravity="right"
                    style="@style/form_label"
                    android:textColor="#FFF" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textViewTarifa"
                android:layout_weight="1"
                android:background="#1e1f1c"
                android:textColor="#FFFFFF"
                android:padding="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/textViewEmpresa"
                android:layout_weight="3"
                android:gravity="right"
                android:background="#1e1f1c"
                android:textColor="#FFFFFF"
                android:padding="8dp" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Próximo Horário"
            android:id="@+id/textViewProximoHorarioLabel"
            android:layout_gravity="center_horizontal"
            style="@style/form_label"
            android:textColor="#FFF"
            android:gravity="center_horizontal" />

        <TextView
            android:textColor="#dd0000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHorario"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="32dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ver Todos"
            android:id="@+id/btnTodosHorarios"
            style="@style/Botao"
            android:layout_gravity="center_horizontal"
            android:padding="5dp" />

    </LinearLayout>
</ScrollView>